[package]
name = "clock-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["David Liedle <david.liedle@protonmail.com>"]
description = "A Model Context Protocol server that gives an AI assistant a wall clock."
license = "MIT"
repository = "https://github.com/devrelopers/clock-mcp"
homepage = "https://github.com/devrelopers/clock-mcp"
documentation = "https://docs.rs/clock-mcp"
readme = "README.md"
keywords = ["mcp", "claude", "time", "clock", "ai"]
categories = ["command-line-utilities", "date-and-time"]

[dependencies]
rmcp = { version = "1.5", features = ["server", "macros", "transport-io"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[profile.release]
lto = "thin"
strip = "symbols"
